@@ -12,3 +12,5 @@
 	those arguments would be available in each and every resolve (and their subdependencies...?)
 
 - when IResolve interface is introduced it should be used instead of IKernelInternal and IReleasePolicy in ITypedFactoryComponentSelector
+
+- when updated to latest Core use ProxyUtil from DP
